Refactor JS: consolidate functions

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <div class="card-conversion">
         <div>
           <h3>Length (Meters / Feet)</h3>
-          <p id="meter-feet">0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
+          <p id="length">0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
         </div>
         <div>
           <h3>Volume (Liters / Gallons)</h3>
-          <p id="liters-gallon">0 liters = 0.000 gallons | 0 gallons = 0.000 liters</p>
+          <p id="volume">0 liters = 0.000 gallons | 0 gallons = 0.000 liters</p>
         </div>
         <div>
           <h3>Mass (Kilograms / Pounds)</h3>
-          <p id="kilos-pounds">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
+          <p id="mass">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
         </div>
       </div>
 
