Fix: 1) Add missing Form closing tag, 2) Make changes to preventDefault() in JS

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <form class="form">
           <label for="user-input"></label>
           <input type="number" name="user-input" id="user-input" placeholder="Type a number" required>
+        </form>
       </div>
 
       <div class="card-conversion">
