--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Scrimba Solo Project - Unit Converter</title>
+  <title>Unit Converter</title>
 </head>
 <body>
   <main class="main-container">
